# nanos3reader

./: .gitignore  CMakeLists.txt  README.md  THIRD-PARTY-LICENSES.md
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
cmake/: nanos3readerConfig.cmake.in
examples/: s3cat.cpp  s3cat_c.c
include/nanos3reader/: nanos3reader.h  s3_reader.h
src/: s3_reader.cpp  s3_reader_c.cpp
tests/: c_api_test.c  minio_integration_test.cpp  sigv4_test.cpp
